k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: easyhomes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 811800851991.dkr.ecr.us-east-2.amazonaws.com/easyhomes/api-gateway:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: easyhomes
spec:
  selector:
    app: api-gateway
  ports:
    - port: 3000
      targetPort: 3000
