k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: easyhomes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: 811800851991.dkr.ecr.us-east-2.amazonaws.com/easyhomes/product-service:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: easyhomes
spec:
  selector:
    app: product-service
  ports:
    - port: 3001
      targetPort: 3001
